# Comiks

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
comiks/: __init__.py  authors.py  colors.py  config.py  config.toml  exceptions.py  model.py  run.py
comiks/provider/: __init__.py  base.py  bitbucket.py  github.py  gitlab.py
