[tool.poetry]
name = "comiks"
version = "1.0.0"
description = "Retrieve authors informations from commits."
readme = "README.md"
repository = "https://github.com/b0oml/Comiks"
authors = ["b0oml"]
include = ["comiks/config.toml"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.2"
tabulate = "^0.8.9"
requests = "^2.27.1"
fastDamerauLevenshtein = "^1.0.7"
GitPython = "^3.1.27"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pylint = "^2.14.2"

[tool.poetry.scripts]
comiks = 'comiks.run:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
